--- a/config.yaml
+++ b/config.yaml
@@ -245,3 +245,4 @@ mentions: >
   [Wala](http://wala-tokensale-website.s3-website-eu-west-1.amazonaws.com/dalawhitepaper.pdf)
   [WALLETH](http://walleth.org/2017/11/28/thoughts-on-the-ux-of-payment-channels/) native Ethereum Android light client wallet
   [WePower](https://wepower.network/WhitePaper-WePower.pdf) Green Energy
+  [Ankr](https://github.com/Ankr-network/ankr-research)
